[package]
name = "command-executor"
authors = ["Giora Kosoi"]
license = "MIT OR Apache-2.0"
description = "Command Executor thread pool"
homepage = "https://www.navigatorsguild.io/"
repository = "https://github.com/navigatorsguild/command-executor"
readme = "README.md"
keywords = ["threadpool", "concurrency", "producer", "consumer", "mpmc"]
categories = ["concurrency", ]
version = "0.0.6-alpha"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.70"
crossbeam = "0.8.2"

[dev-dependencies]
hex = "0.4.3"
sha1 = "0.10.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
benchmark-rs = "0.0.6-alpha"
simple_logger = "4.1.0"
log = "0.4.17"
rand = "0.8.5"



