[package]
name = "command-executor"
authors = ["Giora Kosoi"]
license = "MIT OR Apache-2.0"
description = "Command Executor thread pool"
homepage = "https://www.navigatorsguild.io/"
repository = "https://github.com/navigatorsguild/command-executor"
readme = "README.md"
keywords = ["threadpool", "concurrency", "producer", "consumer", "mpmc"]
categories = ["concurrency", ]
version = "0.1.1"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0"
crossbeam = "0.8"

[dev-dependencies]
hex = "0.4"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
benchmark-rs = "0.1"
simple_logger = "5.0"
log = "0.4"
rand = "0.8"
